<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/language_code_lv"
                android:layout_width="@dimen/language_item_side_size"
                android:layout_height="@dimen/language_item_side_size"
                android:background="@drawable/language_item_background_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lv_language_code"
                    android:textColor="@color/hyperlinkColor"
                    android:textSize="@dimen/language_item_text_size" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/language_code_en"
                android:layout_width="@dimen/language_item_side_size"
                android:layout_height="@dimen/language_item_side_size"
                android:layout_marginStart="@dimen/language_item_start_margin"
                android:background="@drawable/language_item_background_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/en_language_code"
                    android:textColor="@color/hyperlinkColor"
                    android:textSize="@dimen/language_item_text_size" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/language_code_ru"
                android:layout_width="@dimen/language_item_side_size"
                android:layout_height="@dimen/language_item_side_size"
                android:layout_marginStart="@dimen/language_item_start_margin"
                android:background="@drawable/language_item_background_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ru_language_code"
                    android:textColor="@color/hyperlinkColor"
                    android:textSize="@dimen/language_item_text_size" />
            </FrameLayout>

        </LinearLayout>
</layout>