<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/success_image_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/image_submit_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/success_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_side_margin"
        android:layout_marginEnd="@dimen/fragment_side_margin"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:text="@string/label_data_sent"
        android:textColor="@color/titleTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_image_iv" />

    <TextView
        android:id="@+id/success_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/fragment_side_margin"
        android:layout_marginEnd="@dimen/fragment_side_margin"
        android:textAlignment="center"
        android:text="@string/label_success_description"
        android:textColor="@color/subtitleTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_title_tv" />

    <Button
        android:id="@+id/next_close"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_gravity="center"
        android:layout_marginBottom="58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_button_bg_selector"
        android:text="@string/label_success_close"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/success_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>