<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_side_margin"
        android:layout_marginEnd="@dimen/fragment_side_margin">

        <TextView
            android:id="@+id/contact_title_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contact"
            android:textColor="@color/subtitleTextColor"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/missing_contact_container_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_title_label_tv">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/container_flex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:alignItems="stretch"
                app:flexWrap="wrap"
                app:justifyContent="space_between"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/contact_not_specified_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_not_specified"
                    android:textColor="@color/regularTextColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/contact_specify_btn_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_specify"
                    android:textColor="@color/colorButton"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:id="@+id/contact_not_specified_description_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_stay_anonymous_text"
                android:textColor="@color/regularTextColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_flex" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_container_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_title_label_tv">

            <TextView
                android:id="@+id/contact_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="34672455"
                android:textColor="@color/subtitleTextColor"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/contact_change_btn_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/contact_change_btn_tv" />

            <TextView
                android:id="@+id/contact_change_btn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/label_change"
                android:textColor="@color/colorButton"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>